# python-polylith

./: .flake8  .gitignore  CODE-OF-CONDUCT.md  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  workspace.toml
.circleci/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/actions/linting/: action.yaml
.github/actions/test_suite/: action.yaml
.github/workflows/: pull_request.yaml
bases/polylith/cli/: __init__.py  __main__.py  build.py  core.py  create.py  delete.py  env.py  options.py  test.py
bases/polylith/hatch_bricks_build_hook/: __init__.py  core.py  plugin.py
bases/polylith/hatch_hooks/: hooks.py
bases/polylith/hatch_hooks/bricks/: hooks.py
bases/polylith/pdm_hooks/: __init__.py  core.py
bases/polylith/pdm_project_hooks/: core.py
bases/polylith/pdm_workspace_hooks/: core.py
bases/polylith/poetry_plugin/: __init__.py  plugin.py
bases/polylith/poly_cli/: __init__.py  core.py  create.py
components/polylith/alias/: __init__.py  core.py
components/polylith/base/: __init__.py  constants.py  create.py  get.py
components/polylith/block/: __init__.py  blocks.py
components/polylith/bricks/: __init__.py  base.py  brick.py  component.py
components/polylith/building/: __init__.py  core.py  paths.py
components/polylith/check/: __init__.py  collect.py  core.py  grouping.py  report.py
components/polylith/commands/: __init__.py  check.py  create.py  delete.py  deps.py  diff.py  info.py  libs.py  sync.py  test.py
components/polylith/component/: __init__.py  create.py  get.py
components/polylith/configuration/: __init__.py  core.py
components/polylith/development/: __init__.py  development.py
components/polylith/diff/: __init__.py  collect.py  report.py
components/polylith/dirs/: __init__.py  dirs.py
components/polylith/distributions/: __init__.py  caching.py  collect.py  core.py
components/polylith/environment/: __init__.py  core.py
components/polylith/files/: __init__.py  files.py
components/polylith/hatch/: __init__.py  core.py
components/polylith/hatch/hooks/: __init__.py  bricks.py
components/polylith/imports/: __init__.py  grouping.py  parser.py  usages.py
components/polylith/info/: __init__.py  collect.py  report.py
components/polylith/interactive/: __init__.py
components/polylith/interface/: __init__.py  collect.py  interfaces.py  parser.py  report.py  usage.py
components/polylith/libs/: __init__.py  grouping.py  imports.py  lock_files.py  report.py  stdlib.py
components/polylith/log/: __init__.py  log.py
components/polylith/output/: __init__.py  core.py
components/polylith/parsing/: __init__.py  core.py  rewrite.py
components/polylith/pdm/: core.py
components/polylith/pdm/hooks/: bricks.py  workspace.py
components/polylith/poetry/: __init__.py  internals.py
components/polylith/poetry/command/: __init__.py  create_base.py  create_component.py  create_project.py  info.py
components/polylith/poetry/commands/: __init__.py  check.py  command_options.py  create.py  create_base.py  create_brick.py  create_component.py  create_project.py  create_workspace.py  deps.py  diff.py  info.py  libs.py  sync.py  test.py
components/polylith/poetry_command/: __init__.py  create.py  create_base.py  create_component.py  create_project.py  create_workspace.py
components/polylith/profiles/: __init__.py  swap.py
components/polylith/project/: __init__.py  constants.py  create.py  get.py  interactive.py  parser.py  templates.py
components/polylith/readme/: __init__.py  readme.py
components/polylith/repo/: __init__.py  get.py  repo.py  toml.py
components/polylith/reporting/: __init__.py  theme.py
components/polylith/sync/: __init__.py  collect.py  report.py  update.py
components/polylith/test/: __init__.py  core.py  report.py  tests.py
components/polylith/toml/: __init__.py  core.py
components/polylith/workspace/: __init__.py  create.py  parser.py  paths.py  workspaces.py
components/polylith/yaml/: __init__.py  core.py
development/: README.md  david.py
poetry_polylith_plugin/: __init__.py  plugin.py
poetry_polylith_plugin/commands/: __init__.py  create.py  create_base.py  create_component.py  create_project.py  create_workspace.py  info.py
poetry_polylith_plugin/components/: bases.py  blocks.py  components.py  development.py  dirs.py  interfaces.py  log.py  projects.py  readme.py  repo.py  tests.py  toml.py  workspaces.py
poetry_polylith_plugin/components/bases/: __init__.py  create.py  get.py
poetry_polylith_plugin/components/components/: __init__.py  constants.py  create.py  get.py
poetry_polylith_plugin/components/projects/: __init__.py  create.py  get.py
projects/hatch-bricks-build-hook/: pyproject.toml
projects/hatch_polylith_bricks/: README.md  pyproject.toml
projects/pdm_polylith_bricks/: README.md  pyproject.toml
projects/pdm_polylith_workspace/: README.md  pyproject.toml
projects/poetry_polylith_plugin/: README.md  mypy.ini  poetry.toml  pyproject.toml
projects/polylith-cli/: README.md  pyproject.toml
projects/polylith_cli/: README.md  pyproject.toml
test/: conftest.py  params.py
test/bases/polylith/poly_cli/: test_core.py
test/components/oiq/comment_db/: interface.py
test/components/oiq/walkthrough_db/: interface.py
test/components/polylith/alias/: test_alias.py
test/components/polylith/bricks/: test_base.py
test/components/polylith/building/: test_paths.py
test/components/polylith/check/: test_collect.py  test_report.py
test/components/polylith/commands/: test_check.py  test_delete.py  test_diff.py  test_info.py  test_sync.py
test/components/polylith/configuration/: test_core.py
test/components/polylith/diff/: test_collect.py
test/components/polylith/distributions/: test_collect.py  test_core.py
test/components/polylith/environment/: test_parse_paths.py
test/components/polylith/hatch/: test_core.py  test_hook.py
test/components/polylith/imports/: test_parser.py
test/test_data/: pdm  piptools  pixi  rye  uv  uv_workspaces  workspace.toml
(+19 files in other folders)
