[tool.poetry]
name = "python-polylith"
version = "0.0.2"
description = "A Python Polylith repo adding tooling support for the Polylith Architecture"
authors = ["David Vujic"]
homepage = "https://github.com/davidvujic/python-polylith"
repository = "https://github.com/davidvujic/python-polylith"
readme = "README.md"
packages = [
         {include = "polylith/poetry_plugin", from = "bases"},
         {include = "polylith/bricks", from = "components"},
         {include = "polylith/development", from = "components"},
         {include = "polylith/diff", from = "components"},
         {include = "polylith/dirs", from = "components"},
         {include = "polylith/files", from = "components"},
         {include = "polylith/info", from = "components"},
         {include = "polylith/interface", from = "components"},
         {include = "polylith/log", from = "components"},
         {include = "polylith/poetry", from = "components"},
         {include = "polylith/project", from = "components"},
         {include = "polylith/readme", from = "components"},
         {include = "polylith/repo", from = "components"},
         {include = "polylith/test", from = "components"},
         {include = "polylith/workspace", from = "components"},
         {include = "development"}
]

[tool.poetry.dependencies]
python = "^3.8"
poetry = "^1.2"
tomlkit = "^0.11.5"
rich = "^12.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
flake8 = "^5.0.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
