[tool.poetry]
name = "python-polylith"
version = "0.0.2"
description = "A Python Polylith repo adding tooling support for the Polylith Architecture"
authors = ["David Vujic"]
homepage = "https://github.com/davidvujic/python-polylith"
repository = "https://github.com/davidvujic/python-polylith"
readme = "README.md"
packages = [
    {include = "polylith/poetry_plugin",from = "bases"},
    {include = "polylith/cli",from = "bases"},
    {include = "polylith/poly_cli",from = "bases"},
    {include = "polylith/alias",from = "components"},
    {include = "polylith/bricks",from = "components"},
    {include = "polylith/check",from = "components"},
    {include = "polylith/commands",from = "components"},
    {include = "polylith/development",from = "components"},
    {include = "polylith/diff",from = "components"},
    {include = "polylith/dirs",from = "components"},
    {include = "polylith/distributions",from = "components"},
    {include = "polylith/files",from = "components"},
    {include = "polylith/imports",from = "components"},
    {include = "polylith/info",from = "components"},
    {include = "polylith/interface",from = "components"},
    {include = "polylith/libs",from = "components"},
    {include = "polylith/poetry",from = "components"},
    {include = "polylith/project",from = "components"},
    {include = "polylith/readme",from = "components"},
    {include = "polylith/repo",from = "components"},
    {include = "polylith/reporting",from = "components"},
    {include = "polylith/sync",from = "components"},
    {include = "polylith/test",from = "components"},
    {include = "polylith/workspace",from = "components"},
    {include = "development"},
]

[tool.poetry.dependencies]
python = "^3.8.1"
poetry = "^1.2"
tomlkit = "^0.11.5"
rich = "^13.6.0"
typer = {extras = ["all"], version = "^0.9.0"}
cleo = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.10.1"
mypy = "^1.8.0"
flake8 = "^7.0.0"
pytest = "^7.4.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-sv"
