[tool.poetry]
name = "hatch-bricks-build-hook"
version = "0.1.0"
description = "Hatch build hook plugin for Polylith bricks"
authors = ['David Vujic']
license = "MIT"

packages = [
    {include = "polylith/hatch_hooks", from = "../../bases"},
    {include = "polylith/files",from = "../../components"},
    {include = "polylith/readme",from = "../../components"},
    {include = "polylith/dirs",from = "../../components"},
    {include = "polylith/repo",from = "../../components"},
    {include = "polylith/parsing",from = "../../components"},
    {include = "polylith/workspace",from = "../../components"},
    {include = "polylith/project",from = "../../components"},
    {include = "polylith/development",from = "../../components"},
]

[tool.poetry.dependencies]
python = "^3.8.1"
hatchling = "^1.21.0"

[project.entry-points.hatch]
polylith-bricks = "hatch_hooks.bricks.hooks"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
