[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-polylith-bricks"
version = "0.1.0"
description = "Hatch build hook plugin for Polylith bricks"
readme = "README.md"
authors = [{ name = "David Vujic" }]

requires-python = ">=3.8"

dependencies = [
  "hatchling",
]

classifiers = [
  "Framework :: Hatch",
  "License :: OSI Approved :: MIT License",
]

[project.entry-points.hatch]
polylith-bricks = "hatch_hooks.hooks"

[tool.polylith.bricks]
"../../bases/polylith/hatch_hooks" = "polylith/hatch_hooks"
"../../components/polylith/repo" = "polylith/repo"
"../../components/polylith/parsing" = "polylith/parsing"
"../../components/polylith/hatch" = "polylith/hatch"
"../../components/polylith/toml" = "polylith/toml"