[tool.poetry]
name = "hatch-polylith-bricks"
version = "0.0.1"
description = "Hatch build hook plugin for Polylith"
readme = "README.md"
authors = ['David Vujic']
license = "MIT"

packages = [
    {include = "polylith/hatch_hooks", from = "../../bases"},
    {include = "polylith/repo",from = "../../components"},
    {include = "polylith/parsing",from = "../../components"},
    {include = "polylith/hatch",from = "../../components"},
    {include = "polylith/toml",from = "../../components"},
]

classifiers = [
  "Framework :: Hatch",
]

[tool.poetry.dependencies]
python = "^3.9"
hatchling = "^1.21.0"

[tool.poetry.plugins.hatch]
polylith-bricks = "polylith.hatch_hooks.hooks"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
