[tool.poetry]
name = "hatch-polylith-bricks"
version = "1.2.3"
description = "Hatch build hook plugin for Polylith"
authors = ['David Vujic']
homepage = "https://davidvujic.github.io/python-polylith-docs/"
repository = "https://github.com/davidvujic/python-polylith"
license = "MIT"
readme = "README.md"

packages = [
    {include = "polylith/hatch_hooks", from = "../../bases"},
    {include = "polylith/repo",from = "../../components"},
    {include = "polylith/parsing",from = "../../components"},
    {include = "polylith/hatch",from = "../../components"},
    {include = "polylith/toml",from = "../../components"},
]

classifiers = [
  "Framework :: Hatch",
]

[tool.poetry.dependencies]
python = "^3.9"
hatchling = "^1.21.0"
tomlkit = "0.*"

[tool.poetry.plugins.hatch]
polylith-bricks = "hatch_polylith_bricks.polylith.hatch_hooks.hooks"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
