[tool.poetry]
name = "pdm-polylith-bricks"
version = "0.1.0"
description = "PDM build hook for Polylith"
authors = ["David Vujic"]
homepage = "https://davidvujic.github.io/python-polylith-docs/"
repository = "https://github.com/davidvujic/python-polylith"
license = "MIT"
readme = "README.md"

packages = [{include = "polylith/pdm_hooks", from = "../../bases"},]

[tool.poetry.dependencies]
python = "^3.9"
tomlkit = "^0.11.5"

[tool.poetry.plugins."pdm.build.hook"]
polylith-bricks = "pdm_polylith_bricks.polylith.pdm_hooks.core"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
