[tool.poetry]
name = "pdm-polylith-bricks"
version = "1.1.2"
description = "a PDM build hook for Polylith"
authors = ["David Vujic"]
homepage = "https://davidvujic.github.io/python-polylith-docs/"
repository = "https://github.com/davidvujic/python-polylith"
license = "MIT"
readme = "README.md"

packages = [
    {include = "polylith/pdm_project_hooks", from = "../../bases"},
    {include = "polylith/building",from = "../../components"},
    {include = "polylith/configuration",from = "../../components"},
    {include = "polylith/parsing",from = "../../components"},
    {include = "polylith/pdm",from = "../../components"},
    {include = "polylith/repo",from = "../../components"},
    {include = "polylith/toml",from = "../../components"},
]

[tool.poetry.dependencies]
python = "^3.9"
tomlkit = "0.*"

[tool.poetry.plugins."pdm.build.hook"]
polylith-bricks = "pdm_polylith_bricks.polylith.pdm_project_hooks.core"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
