[tool.poetry]
name = "pdm-polylith-workspace"
version = "1.0.3"
description = "a PDM build hook for a Polylith workspace"
homepage = "https://davidvujic.github.io/python-polylith-docs/"
repository = "https://github.com/davidvujic/python-polylith"
authors = ["David Vujic"]
license = "MIT"
readme = "README.md"

packages = [
    {include = "polylith/pdm_workspace_hooks", from = "../../bases"},
    {include = "polylith/configuration",from = "../../components"},
    {include = "polylith/parsing",from = "../../components"},
    {include = "polylith/pdm",from = "../../components"},
    {include = "polylith/repo",from = "../../components"},
    {include = "polylith/toml",from = "../../components"},
]

[tool.poetry.dependencies]
python = "^3.9"
tomlkit = "0.*"

[tool.poetry.plugins."pdm.build.hook"]
polylith-workspace = "pdm_polylith_workspace.polylith.pdm_workspace_hooks.core"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
