[tool.poetry]
name = "poetry-polylith-plugin"
version = "1.6.0"
description = "A Poetry plugin that adds tooling support for the Polylith Architecture"
authors = ["David Vujic"]
homepage = "https://davidvujic.github.io/python-polylith-docs/"
repository = "https://github.com/davidvujic/python-polylith"
readme = "README.md"
packages = [
    {include = "polylith/poetry_plugin",from = "../../bases"},
    {include = "polylith/bricks",from = "../../components"},
    {include = "polylith/check",from = "../../components"},
    {include = "polylith/development",from = "../../components"},
    {include = "polylith/diff",from = "../../components"},
    {include = "polylith/dirs",from = "../../components"},
    {include = "polylith/files",from = "../../components"},
    {include = "polylith/imports",from = "../../components"},
    {include = "polylith/info",from = "../../components"},
    {include = "polylith/interface",from = "../../components"},
    {include = "polylith/libs",from = "../../components"},
    {include = "polylith/poetry",from = "../../components"},
    {include = "polylith/project",from = "../../components"},
    {include = "polylith/readme",from = "../../components"},
    {include = "polylith/repo",from = "../../components"},
    {include = "polylith/reporting",from = "../../components"},
    {include = "polylith/sync",from = "../../components"},
    {include = "polylith/test",from = "../../components"},
    {include = "polylith/workspace",from = "../../components"}
]

[tool.poetry.plugins."poetry.application.plugin"]
poetry-polylith-plugin = "polylith.poetry_plugin:PolylithPlugin"

[tool.poetry.dependencies]
python = "^3.8"
poetry = "^1.2"
tomlkit = "^0.11.5"
rich = "^13.3.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
