[tool.poetry]
name = "poetry-polylith-plugin"
version = "1.37.1"
description = "A Poetry plugin that adds tooling support for the Polylith Architecture"
authors = ["David Vujic"]
homepage = "https://davidvujic.github.io/python-polylith-docs/"
repository = "https://github.com/davidvujic/python-polylith"
license = "MIT"
readme = "README.md"

packages = [
    { include = "polylith/poetry_plugin", from = "../../bases" },
    { include = "polylith/alias", from = "../../components" },
    { include = "polylith/bricks", from = "../../components" },
    { include = "polylith/check", from = "../../components" },
    { include = "polylith/commands", from = "../../components" },
    { include = "polylith/configuration", from = "../../components" },
    { include = "polylith/deps", from = "../../components" },
    { include = "polylith/development", from = "../../components" },
    { include = "polylith/diff", from = "../../components" },
    { include = "polylith/dirs", from = "../../components" },
    { include = "polylith/distributions", from = "../../components" },
    { include = "polylith/files", from = "../../components" },
    { include = "polylith/imports", from = "../../components" },
    { include = "polylith/info", from = "../../components" },
    { include = "polylith/interface", from = "../../components" },
    { include = "polylith/libs", from = "../../components" },
    { include = "polylith/poetry", from = "../../components" },
    { include = "polylith/project", from = "../../components" },
    { include = "polylith/readme", from = "../../components" },
    { include = "polylith/repo", from = "../../components" },
    { include = "polylith/reporting", from = "../../components" },
    { include = "polylith/sync", from = "../../components" },
    { include = "polylith/test", from = "../../components" },
    { include = "polylith/toml", from = "../../components" },
    { include = "polylith/workspace", from = "../../components" },
    { include = "polylith/yaml", from = "../../components" },
]

[tool.poetry.plugins."poetry.application.plugin"]
poetry-polylith-plugin = "polylith.poetry_plugin:PolylithPlugin"

[tool.poetry.dependencies]
python = "^3.8"
poetry = "*"
tomlkit = "0.*"
rich = "13.*"
cleo = "^2.1.0"
pyyaml = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
