[tool.poetry]
name = "polylith-cli"
version = "1.42.3"
description = "Python tooling support for the Polylith Architecture"
authors = ['David Vujic']
homepage = "https://davidvujic.github.io/python-polylith-docs/"
repository = "https://github.com/davidvujic/python-polylith"
license = "MIT"
readme = "README.md"

packages = [
    { include = "polylith/cli", from = "../../bases" },
    { include = "polylith/alias", from = "../../components" },
    { include = "polylith/bricks", from = "../../components" },
    { include = "polylith/building", from = "../../components" },
    { include = "polylith/check", from = "../../components" },
    { include = "polylith/commands", from = "../../components" },
    { include = "polylith/configuration", from = "../../components" },
    { include = "polylith/deps", from = "../../components" },
    { include = "polylith/development", from = "../../components" },
    { include = "polylith/diff", from = "../../components" },
    { include = "polylith/dirs", from = "../../components" },
    { include = "polylith/distributions", from = "../../components" },
    { include = "polylith/environment", from = "../../components" },
    { include = "polylith/files", from = "../../components" },
    { include = "polylith/imports", from = "../../components" },
    { include = "polylith/info", from = "../../components" },
    { include = "polylith/interactive",from = "../../components" },
    { include = "polylith/interface", from = "../../components" },
    { include = "polylith/libs", from = "../../components" },
    { include = "polylith/output", from = "../../components" },
    { include = "polylith/parsing", from = "../../components" },
    { include = "polylith/project", from = "../../components" },
    { include = "polylith/readme", from = "../../components" },
    { include = "polylith/repo", from = "../../components" },
    { include = "polylith/reporting", from = "../../components" },
    { include = "polylith/sync", from = "../../components" },
    { include = "polylith/test", from = "../../components" },
    { include = "polylith/toml", from = "../../components" },
    { include = "polylith/workspace", from = "../../components" },
    { include = "polylith/yaml", from = "../../components" },
]

[tool.poetry.dependencies]
python = "^3.8"
tomlkit = "0.*"
rich = ">=13,<15"
typer = "0.*"
pyyaml = "*"
typing_extensions = [
  { version = "<4.14", python = ">=3.8,<3.9" },
  { version = "*",     python = ">=3.9" }
]

[tool.poetry.scripts]
poly = "polylith_cli.polylith.cli.core:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
